# netframz

./: .gitignore  CMakeLists.txt  count  main.cpp
echo_svr/: CMakeLists.txt  config.cpp  config.h  connector.cpp  connector.h  err_code.h  log.cpp  main.cpp  proto.h  server.config.example  server.cpp  server.h  server_config.cpp  server_config.h
echo_svr/test/: CMakeLists.txt  robot_client.cpp  send_client.cpp  send_patch_client.cpp  tcp_client.cpp  tcp_client.h
graph/: code_review.pptx  graph1.gv  input.gv  main.gv  output.gv  绘图1.vsdx
netfram/: CMakeLists.txt  Makefile
netfram/glog/: config.h  log_def.h  logging.h
netfram/lib/: README.md
netfram/net/: acceptor.h  byte_buffer.cpp  connector.cpp  connector.h  endpoint.cpp  endpoint.h  nf_socket_api.cpp  nf_socket_api.h  socket.cpp  socket.h
netfram/utils/: CMakeLists.txt  log.h  nf_epoll.cpp  nf_epoll.h  nf_event.cpp  nf_event.h  nf_event_idle_impl.h  nf_event_iotask.cpp  nf_event_iotask.h  nf_event_iotask_impl.cpp  nf_event_iotask_impl.h  nf_event_timer_heap.h  nf_event_timer_impl.h  nf_event_timer_mng.cpp  nf_event_timer_task.cpp  nf_event_timer_task.h  nf_event_timer_wheel.h  nf_mutex.cpp  nf_mutex.h  nf_thread.cpp
netfram/utils/test/: CMakeLists.txt  echo_server.cpp  epoll.cpp  epoll_in_out.cpp  glog_test.cpp  iotask.cpp  pthread.cpp  robot_client.cpp  send_client.cpp  thread.cpp  timer.cpp  tmem_check.cpp
src/: CMakeLists.txt  log.h  mem_check.h  nf_condition.cpp  nf_condition.h  nf_epoll.cpp  nf_epoll.h  nf_event.cpp  nf_event.h  nf_event_config.h  nf_event_idle_impl.cpp  nf_event_idle_impl.h  nf_event_idle_task.cpp  nf_event_idle_task.h  nf_event_iotask.cpp  nf_event_iotask.h  nf_event_iotask_impl.cpp  nf_event_iotask_impl.h  nf_event_task.cpp  nf_event_task.h  nf_event_timer.cpp  nf_event_timer.h  nf_event_timer_heap.cpp  nf_event_timer_heap.h  nf_event_timer_impl.cpp  nf_event_timer_impl.h  nf_event_timer_implv1.cpp  nf_event_timer_implv1.h  nf_event_timer_mng.cpp  nf_event_timer_mng.h  nf_event_timer_task.cpp  nf_event_timer_task.h  nf_event_timer_wheel.cpp  nf_event_timer_wheel.h  nf_list.h  nf_lock_queue.h  nf_mem_check.cpp  nf_mem_check.h  nf_mutex.cpp  nf_mutex.h  (+5 more)
src/impl/: nf_event_timer_impl.cpp  nf_event_timer_impl.h  nf_operator.h
src/test/: CMakeLists.txt  echo_server.cpp  epoll.cpp  epoll_in_out.cpp  idle.cpp  iotask.cpp  robot_client.cpp  send_client.cpp  tcp_client.cpp  thread.cpp  thread_cond.cpp  timer.cpp  timer_heap.cpp
test_server/: CMakeLists.txt  buffer.h  connector.cpp  connector.h  connetor.h  main.cpp  server.cpp  server.h  server_config.cpp  server_config.h
test_server_normal/: CMakeLists.txt  connector.cpp  connector.h  log.cpp  log.h  main.cpp  proto.h  server.cpp  server.h  server_config.cpp  server_config.h
test_server_normal/test/: CMakeLists.txt  robot_client.cpp  send_client.cpp
zone_svr/: CMakeLists.txt  acceptor.cpp  acceptor.h  aoi_manage.cpp  aoi_manage.h  byte_buffer.h  config.cpp  connector.cpp  connector.h  endpoint.cpp  endpoint.h  log.h  main.cpp  player.cpp  player.h  player_manage.cpp  player_manage.h  proto.h  scene_manage.cpp  scene_manage.h  server.config.example  server.cpp  server.h  server_config.cpp  server_config.h  socket.cpp  socket.h  zonesvr.cpp  zonesvr.h
zone_svr/client/: CMakeLists.txt  cfg_test.cpp  client_api.cpp  client_api.h  robot.sh  robot_client.cpp  send_client.cpp  zone_client.cpp  zone_client_v2.cpp
zone_svr/conf/: server.config.example
zone_svr/proto/: zonesvr.pb.cc  zonesvr.pb.h  zonesvr.proto
zone_svr/proto/py/: zonesvr_pb2.py
zone_svr/py_client/: py_client.py  zonesvr.proto  zonesvr_pb2.py
zone_svr/test/: CMakeLists.txt  client_api.cpp  client_api.h  input.txt  robot.sh  zone_client.cpp  zone_client_v2.cpp
zonesvr/: CMakeLists.txt  acceptor.cpp  aoi_manage.cpp  aoi_manage.h  byte_buffer.h  config.cpp  config.h  connector.cpp  connector.h  endpoint.cpp  endpoint.h  err_code.h  log.cpp  log.h  player.cpp  player_manage.h  proto.cpp  proto.h  scene_manage.cpp  server.cpp  server.h  server_config.cpp  server_config.h  socket.cpp  socket.h  timer_task_mgr.cpp  timer_task_mgr.h  world.cpp  world.h  zone.cpp  zone.h  zone_connect_mgr.cpp  zone_connect_mgr.h  zone_connector.cpp  zone_connector.h  zone_session.cpp  zone_session.h  zonesvr.cpp  zonesvr.h
zonesvr/client/: CMakeLists.txt  client_api.cpp  client_api.h  client_worker.cpp  client_worker.h  robot.cpp  robot_api.cpp  robot_api.h  robot_client.cpp  robot_v2.sh  robot_worker.cpp  send_patch_client.cpp  tcp_client.cpp  tendpoint.cpp  zone_client_v2.cpp
zonesvr/conf/: server.config.example
zonesvr/proto/: build.sh  zonesvr.pb.cc  zonesvr.pb.h  zonesvr.proto
zonesvr/proto/py/: zonesvr_pb2.py
zonesvr/py_client/: zonesvr.proto
zonesvr/xml/: tinyxml2.cpp
